add oauth login with google, Inquiries collection and protect write routes
